--- a/SimpleOrderWebApi/wwwroot/index.html
+++ b/SimpleOrderWebApi/wwwroot/index.html
@@ -27,8 +27,11 @@
                     
         }
         tr.sub-header td { font-size:24pt;background-color:#adf;}
+        tr.orders td {
+            width:50%;
+        }
         table {border-collapse:collapse;}
-        div.order { font-size:25pt; border:2px solid black;
+        div.order { font-size:25pt; border:2px solid black; width:15%; margin:10px;float:left;
         }
         
     </style>
@@ -37,7 +40,7 @@
     <table class="container">
         <tr><td colspan="2" class="header">ORDER STATUS</td></tr>
         <tr class="sub-header"><td>BEING PREPARED</td><td>READY FOR PICKUP</td></tr>
-        <tr><td class="being-prepared"></td><td class="ready-for-pickup"></td></tr>
+        <tr class="orders"><td class="being-prepared"></td><td class="ready-for-pickup"></td></tr>
     </table>
     <script src="js/signalr.js"></script>
     <script src="js/orders.js"></script>
