Change in Web API interface and changed windows client to work with orders.codesamples.dk

--- a/SimpleOrderWebApi/wwwroot/index.html
+++ b/SimpleOrderWebApi/wwwroot/index.html
@@ -31,7 +31,7 @@
             width:50%;
         }
         table {border-collapse:collapse;}
-        div.order { font-size:25pt; border:2px solid black; width:15%; margin:10px;float:left;
+        div.order { font-size:32pt; font-weight:bold;border:2px solid black; width:15%; margin:10px;float:left;
         }
         
     </style>
